--- a/O2/Latex/Procedimento.tex
+++ b/O2/Latex/Procedimento.tex
@@ -10,15 +10,41 @@ L'angolo ''zero'' quindi ha il seguente valore:
 \end{equation} 
 
 Ora vogliomo osservare la relazione che sussiste tra l'indice di rifrazione del nostro prisma di vetro e la lunghezza d'ona di un raggio luminoso.
-A tal fine occorre ricordare che il raggio luminoso incidente su una faccia di un prisma subisce una riflessione e una rifrazione, poichè passa da un mezzo ad un altro.
-Consideriamo ora cosa accade al raggio rifratto. Poichè il raggio luminoso incidente non è monocromatico questo è composto da numerosi fasci luminosi con lunghezza d'onda differente, tutte quelle presenti nello spettro del visibile. Quindi quando il raggio incidente viaggia attraverso il prisma si scompone nelle sue varie componenti (dispersione della luce) a seconda delle diffrenti lunghezze d'onda dei fasci luminosi che lo comongono. Quindi i vari raggi luminosi subiscono un'ulteriore rifrazione passando nuovamente dal vetro all'aria, uscendo pertanto dal prisma. Questa seconda rifrazione non porta altro che ad un'amplificazione dell'effetto precedente, pertanto è più semplice distinguere i vari raggi luminosi.
-In questa esperienza noi non siamo in grado di misurare direttamente la lunghezza d'onda di un raggio luminoso. Ciononostante sappiamo che ad un dato colore del raggio luminoso corrisponde una certa lunghezza d'onda, pertanto ora ci interessa trovare l'indice di rifrazione, del prisma, corrispondente ai nostri raggi luminosi monocromatici e quindi di una precisa lunghezza d'onda.
-Noi sappiamo che, in un prisma, per ottenere l'indice di rifrazione di un materiale senza sapere la lunghezza d'onda del raggio uminoso incidente, basta conoscere l'angolo massimo ($\theta\ped{max}$) di uscita del raggio rifratto rispetto al proungamento della direzione incidente. Quindi noto questo valore applichiamo la sguente relazione:
+A tal fine occorre ricordare che un raggio luminoso incidente su una faccia di un prisma subisce una riflessione e una rifrazione, poichè passa da un mezzo ad un altro.
+Consideriamo ora cosa accade al raggio rifratto. Poichè il raggio luminoso incidente non è monocromatico questo è composto da numerosi raggi luminosi con lunghezza d'onda differente, tutte quelle presenti nello spettro del visibile. Infatti quando il raggio incidente viaggia attraverso il prisma si scompone nelle sue varie componenti (dispersione della luce) a seconda delle diffrenti lunghezze d'onda che lo comongono. Quindi i ragi monocromatici subiscono un'ulteriore rifrazione passando nuovamente dal vetro all'aria, uscendo pertanto dal prisma. Questa seconda rifrazione non porta altro che ad un'amplificazione dell'effetto precedente, pertanto è più semplice distinguere i vari raggi luminosi.
+In questa esperienza noi non siamo in grado di misurare direttamente la lunghezza d'onda di un raggio luminoso. Ciononostante sappiamo che ad un dato colore del raggio luminoso corrisponde una certa lunghezza d'onda, pertanto ci interessa trovare l'indice di rifrazione, del prisma, corrispondente ai nostri raggi monocromatici e quindi ad una precisa lunghezza d'onda ($\lambda$).
+A tal fine noi sappiamo che, in un prisma, per ottenere l'indice di rifrazione di un materiale senza conoscere la lunghezza d'onda del raggio luminoso incidente, basta conoscere l'angolo massimo ($\theta\ped{max}$) di uscita del raggio rifratto rispetto al proungamento della direzione incidente. Quindi noto questo valore applichiamo la sguente relazione:
 
 \begin{equation}
 	n \,=\, \frac{\sin{(\alpha\,+\,\frac{\theta\ped{max}}{2})}}{\sin{\frac{\alpha}{2}}}
+	\label{indice_rif}
 \end{equation}
 
 dove $\alpha$ è l'angolo di apertura del prisma, che nel nostro caso vale $60^\circ$, e ci ricaviamo così il valore dell'indice di rifrazione in base al colore (quindi indirettamente alla lunghezza d'onda) del raggio luminoso in esame.
+Per completare il quadro teorico è doveroso chiarire cosa si ntenda con $\theta\ped{max}$: questo angolo è l'angolo massimo di uscita, dal prisma, del ragio monocromatico. Infatti sperimentalmente si è osservato che sopra un certo $\theta$ il raggio luminoso non continua ad aumetare l'angolo che forma con il prolungamento del raggio incidente, ma ''ritorna indietro''.\\
+%scusatemi, questa ultima descrizione non sono riuscito a farla meglio. Lo so Pasa mi vuole ammazzare perchè tocca fare tutto a lui... :(
 
 Ora questa è la teoria che stà alla base dell'esperienza. Operativamente per misurare $\theta\ped{max}$ abbiamo adottato la seguente procedura:
+
+\begin{itemize}
+	\item{si posiziona il prisma al centro del goniometro. Successivamente si ruota il prisma per cercare di ottenere $\theta\ped{max}$, aiutandosi con il canocchiale;}
+	\item{una volta ottenuto $\theta\ped{max}$ si cerca di allineare il meglio possibile il canocchiale col crocifilo con il raggio monocromatico in esame e si legge sullo spettrogoniometro il valore dell'angolo segnato ($\theta\ped{i}$);}
+	\item{quindi per ottenere $\theta\ped{max}$ non si deve fare altro che una semplice differenza tra $\theta\ped{i}$ e $\theta\ped{0}$;}
+\end{itemize}
+
+Infine una volta ottenuti i vari valori di $\theta\ped{max}$ per ciascuno dei raggi monocromatici che siamo stati in grado di distinguere ne calcoliamo il rispettivo indice di rifrazione sfruttando la relazione (\ref{indice_rif}). I valori che abbiamo ottenuto sono riportati nella seguente tabella, nella quale è stato associato al colore del raggio monocromatico la ripettiva lunghezza d'ona, ottenuta trammite supporto multimediale.
+
+[TABELLA]
+
+Come possiamo notare dai valori tabulati l'indice di rifrazione dei vari raggi monocromatici verde blu e viola varia solo se si osserva la terza cifra decimale, mentre tra questi e il rosso la diffrenza la si può notare anche esaminando la seconda cifra decimale. Questa differenza ha senso perchè osservando la distanza, tra loro, dei raggi con il canocchiale, il raggio monocromatico rosso era sensibilmente più distante dagli altri raggi, come si può notare anche dai rispettivi valori di lunghezza d'onda. Infatti il raggio di colore rosso si trova ad un estremo dello spettro del visibile, mentre i raggi verde blu e viola sono più vicini all'altra estremità dello spettro luminoso visibile, ovvero dalla parte del colore blu/viola. Infine sperimentalmente abbiamo avuto non poche difficoltà ad individuare le due gradazioni di rosso oltre a quella primaria. Questa difficoltà si può comprendere se si osserva che l'indice di rifraione per i tre raggi monocromatici rossi varia soltanto attorno alla quarta cifra decimale. Inoltre anche le rispettive lunghezze d'onda non sono poi così marcatamente differenti.
+
+\subsection{Verifica sperimentale della legge che lega l'angolo di incidenza, sul prisma, di un raggio luminoso col relativo angolo di uscita}
+
+In questa seconda parte dell'esperienza vogliamo verificare la seguente relazione sperimentale:
+
+\begin{equation}
+	\theta \,=\, \arcsin{(n - \sin{r})} + \arcsin{(n \, \sin{(\alpha - r)})} - \alpha
+	\label{eq.brutta}
+\end{equation}
+
+dove: $\theta$ indica l'angolo di incidenza del raggio luminoso su di una faccia del prisma, $\alpha$ non è altro che l'angolo di apertura del prisma, e $r$, ops non ho il disegno, seriamente che cosa rappresenta r...
