--- a/O2/Latex/Procedimento.tex
+++ b/O2/Latex/Procedimento.tex
@@ -6,7 +6,7 @@ La prima operazione eseguita è stata quella di misurare l'angolo ''zero''. Ovve
 L'angolo ''zero'' quindi ha il seguente valore:
 
 \begin{equation}
-	\theta\ped{0} \,=\, 128.31^\circ \pm 0.01^\circ
+	\theta\ped{0} \,=\, 128^\circ \,31' \pm 1'
 \end{equation} 
 
 Ora vogliomo osservare la relazione che sussiste tra l'indice di rifrazione del nostro prisma di vetro e la lunghezza d'ona di un raggio luminoso.
@@ -32,9 +32,9 @@ Ora questa è la teoria che stà alla base dell'esperienza. Operativamente per m
 	\item{quindi per ottenere $\theta\ped{max}$ non si deve fare altro che una semplice differenza tra $\theta\ped{i}$ e $\theta\ped{0}$;}
 \end{itemize}
 
-Infine una volta ottenuti i vari valori di $\theta\ped{max}$ per ciascuno dei raggi monocromatici che siamo stati in grado di distinguere ne calcoliamo il rispettivo indice di rifrazione sfruttando la relazione (\ref{indice_rif}). I valori che abbiamo ottenuto sono riportati nella seguente tabella, nella quale è stato associato al colore del raggio monocromatico la ripettiva lunghezza d'ona, ottenuta trammite supporto multimediale.
+Infine una volta ottenuti i vari valori di $\theta\ped{max}$ per ciascuno dei raggi monocromatici che siamo stati in grado di distinguere ne calcoliamo il rispettivo indice di rifrazione sfruttando la relazione (\ref{indice_rif}). I valori che abbiamo ottenuto sono riportati nella seguente tabella, nella quale è stato associato al colore del raggio monocromatico la ripettiva lunghezza d'onda, ottenuta trammite supporto multimediale.
 
-[TABELLA]
+\input{tabella_enne_gradi.tex}
 
 Come possiamo notare dai valori tabulati l'indice di rifrazione dei vari raggi monocromatici verde blu e viola varia solo se si osserva la terza cifra decimale, mentre tra questi e il rosso la diffrenza la si può notare anche esaminando la seconda cifra decimale. Questa differenza ha senso perchè osservando la distanza, tra loro, dei raggi con il canocchiale, il raggio monocromatico rosso era sensibilmente più distante dagli altri raggi, come si può notare anche dai rispettivi valori di lunghezza d'onda. Infatti il raggio di colore rosso si trova ad un estremo dello spettro del visibile, mentre i raggi verde blu e viola sono più vicini all'altra estremità dello spettro luminoso visibile, ovvero dalla parte del colore blu/viola. Infine sperimentalmente abbiamo avuto non poche difficoltà ad individuare le due gradazioni di rosso oltre a quella primaria. Questa difficoltà si può comprendere se si osserva che l'indice di rifraione per i tre raggi monocromatici rossi varia soltanto attorno alla quarta cifra decimale. Inoltre anche le rispettive lunghezze d'onda non sono poi così marcatamente differenti.
 
@@ -48,3 +48,7 @@ In questa seconda parte dell'esperienza vogliamo verificare la seguente relazion
 \end{equation}
 
 dove: $\theta$ indica l'angolo di incidenza del raggio luminoso su di una faccia del prisma, $\alpha$ non è altro che l'angolo di apertura del prisma, e $r$, ops non ho il disegno, seriamente che cosa rappresenta r...
+
+r rappresenta l'angolo di Rifrazione, cioè quello del raggio rifratto da un primo passaggio nel prisma del raggio incidente. dalla legge di snell $n_isin(i) = n_rsin(r)$
+
+\input{tabella_dev_gradi.tex}
