--- a/O2/Latex/title.tex
+++ b/O2/Latex/title.tex
@@ -1,6 +1,6 @@
 \begin{center}
 
-     	{\huge Spettrometro \& Indice di Rifrazione.}
+     	{\huge Indice di Rifrazione e Angolo di Incidenza.}
 	\vspace{0.5cm}
 
       	{\large Francesco Pasa, Davide Bazzanella, Andrea Miani} \\
