viva il sabato sera

--- a/O2/Latex/Procedimento.tex
+++ b/O2/Latex/Procedimento.tex
@@ -44,11 +44,19 @@ In questa seconda parte dell'esperienza vogliamo verificare la seguente relazion
 
 \begin{equation}
 	\theta \,=\, \arcsin{(n - \sin{r})} + \arcsin{(n \, \sin{(\alpha - r)})} - \alpha
-	\label{eq.brutta}
+	\label{eq:brutta}
 \end{equation}
 
 dove: $\theta$ indica l'angolo di incidenza del raggio luminoso su di una faccia del prisma, $\alpha$ non è altro che l'angolo di apertura del prisma, e $r$, ops non ho il disegno, seriamente che cosa rappresenta r...
 
 r rappresenta l'angolo di Rifrazione, cioè quello del raggio rifratto da un primo passaggio nel prisma del raggio incidente. dalla legge di snell $n_isin(i) = n_rsin(r)$
+
+\begin{figure}[b]
+    \includegraphics[width=16cm]{graph.pdf}
+    \caption{Il grafico mostra i punti che abbiamo raccolto assieme ad un plot della legge (\ref{eq:brutta}). I dati concordano
+    molto bene con la curva teorica, sebbene ci siano due punti errati, sicuramente dovuti ad errori nelle misure. L'errore di
+    risoluzione è piccolo e non è mostrato in figura, in quanto le barre d'errore sono invisibili.}
+    \label{fig:dev}
+\end{figure}
 
 \input{tabella_dev_gradi.tex}
