dave mi vuole morto

--- a/O2/Latex/Procedimento.tex
+++ b/O2/Latex/Procedimento.tex
@@ -66,6 +66,8 @@ Pertanto quello che dobbiamo fare, in pratica, è misurare $\theta\ped{i}$ col s
 	\item{infine confronteremo i $\theta$ sperimentali con i valori trovati grazie alla relazione (\ref{eq:brutta}) e scoprimemo pertanto se quest'utima è una relazione valida;}
 \end{itemize}
 
+Come si può osservare dal grafico infigura (\ref{fig:dev}) abbimo ottenuto dei dati che combaciano molto bene con la legge sperimentale (\ref{eq:brutta}) in esame, tralasciando due punti, che con molta probabilità non sono stati presi accuratamente come gli altri. Quindi ci sentiamo di dire che la relazione (\ref{eq:brutta}) che lega $\theta$ con l'angolo di incidenza del raggio luminoso sulla faccia del prisma è verificata.
+
 \begin{figure}[b]
     \includegraphics[width=16cm]{graph.pdf}
     \caption{Il grafico mostra i punti che abbiamo raccolto assieme ad un plot della legge (\ref{eq:brutta}). I dati concordano
