--- a/O2/Latex/Procedimento.tex
+++ b/O2/Latex/Procedimento.tex
@@ -63,10 +63,10 @@ Pertanto quello che dobbiamo fare, in pratica, è misurare $\theta\ped{i}$ col s
 	\item{abbiamo scelto di ricavare $\theta$ per il raggio monocromatico di colore verde, quindi di lunghezza d'onda pari a XXX;}
 	\item{non potendo tuttavia misurare direttamente l'angolo di incidenza ($\theta\ped{i}$) abbiamo misurato l'angolo di riflessione del raggio riflesso allineando il canocchiale col crocifilo la raggio riflesso. Quindi sapendo che l'angolo di incidenza non è altro che la metà dell'angolo misurato abbiamo trovato $\theta\ped{i}$;}
 	\item{quindi per ognuno dei 23 angoli di incidenza misurati abbiamo preso il corrispettivo valore di $\theta$ allineando il canocchiale col crocifilo con il raggio monocromatico verede uscente al prisma;}
-	\item{infine confronteremo i $\theta$ sperimentali con i valori trovati grazie alla relazione (\ref{eq:brutta}) e scoprimemo pertanto se quest'utima è una relazione valida;}
+	\item{infine confronteremo i $\theta$ sperimentali con i valori trovati grazie alla relazione (\ref{eq:brutta}) e verificheremo se quest'utima è una relazione valida;}
 \end{itemize}
 
-Come si può osservare dal grafico infigura (\ref{fig:dev}) abbimo ottenuto dei dati che combaciano molto bene con la legge sperimentale (\ref{eq:brutta}) in esame, tralasciando due punti, che con molta probabilità non sono stati presi accuratamente come gli altri. Quindi ci sentiamo di dire che la relazione (\ref{eq:brutta}) che lega $\theta$ con l'angolo di incidenza del raggio luminoso sulla faccia del prisma è verificata.
+Come si può osservare dal grafico infigura (\ref{fig:dev}) abbimo ottenuto dei datisperimentali che combaciano molto bene con la legge da verificare (\ref{eq:brutta}). Tralasciando due punti, che con molta probabilità non sono stati presi accuratamente come gli altri ci sentiamo di dire che la relazione (\ref{eq:brutta}) che lega $\theta$ con l'angolo di incidenza del raggio luminoso sulla faccia del prisma è verificata.
 
 \begin{figure}[b]
     \includegraphics[width=16cm]{graph.pdf}
