--- a/O2/Latex/Procedimento.tex
+++ b/O2/Latex/Procedimento.tex
@@ -21,7 +21,7 @@ A tal fine noi sappiamo che, in un prisma, per ottenere l'indice di rifrazione d
 \end{equation}
 
 dove $\alpha$ è l'angolo di apertura del prisma, che nel nostro caso vale $60^\circ$, e ci ricaviamo così il valore dell'indice di rifrazione in base al colore (quindi indirettamente alla lunghezza d'onda) del raggio luminoso in esame.
-Per completare il quadro teorico è doveroso chiarire cosa si ntenda con $\theta\ped{max}$: questo angolo è l'angolo massimo di uscita, dal prisma, del ragio monocromatico. Infatti sperimentalmente si è osservato che sopra un certo $\theta$ il raggio luminoso non continua ad aumetare l'angolo che forma con il prolungamento del raggio incidente, ma ''ritorna indietro''.\\
+Per completare il quadro teorico è doveroso chiarire cosa si intenda con $\theta\ped{max}$: questo angolo è l'angolo massimo di uscita, dal prisma, del ragio monocromatico. Infatti sperimentalmente si è osservato che sopra un certo $\theta$ il raggio luminoso non continua ad aumetare l'angolo che forma con il prolungamento del raggio incidente, ma ''ritorna indietro''.\\
 %scusatemi, questa ultima descrizione non sono riuscito a farla meglio. Lo so Pasa mi vuole ammazzare perchè tocca fare tutto a lui... :(
 
 Ora questa è la teoria che stà alla base dell'esperienza. Operativamente per misurare $\theta\ped{max}$ abbiamo adottato la seguente procedura:
