--- a/O2/Latex/Materiale.tex
+++ b/O2/Latex/Materiale.tex
@@ -2,8 +2,8 @@
 
 Per questa esperienza di laboratorio il materiale a disposizione è stato il seguente:
 \begin{itemize}
-	\item{Goniometro, con risoluzione di misura di 30'' dotato di collimatore con fenditura variabile e canocciale con crocifilo;}
+	\item{Goniometro, con risoluzione di misura di 30'' dotato di collimatore con fenditura variabile e canocchiale con crocifilo;}
     \item{Prisma di vetro;}
-	\item{Lampada a gass;}
-	\item{Lente di ingrandimento;}
+	\item{Lampada a gas;}
+	\item{Lente di ingrandimento per la lettura del goniometro;}
 \end{itemize}
