--- a/O2/Latex/tabella_enne_gradi.tex
+++ b/O2/Latex/tabella_enne_gradi.tex
@@ -13,6 +13,6 @@
 		Viola &		$167^\circ \, 47' \pm 1'$ &	$1.5238 \pm 0.0003$ \\
         \bottomrule
     \end{tabular}
-    \caption{Dati relativi all'indice di rifrazioe $n$ in funzione del colore e quindi della lunghezza d'onda $\lambda$.}
+    \caption{Dati relativi all'indice di rifrazione $n$ in funzione del colore e quindi della lunghezza d'onda $\lambda$.}
     \label{tab:enne}
 \end{table}
