--- a/O2/Latex/Introduzione.tex
+++ b/O2/Latex/Introduzione.tex
@@ -1,6 +1,5 @@
 \section{Introduzione}
 
-Lo scopo di questa esperienza di laboratorio è quello di osservare la relazione esistente tra l'indice di rifrazione del materiale di cui è costituito il prisma in dotazione e la lunghezza d'onda dei raggi luminosi incidenti, generati da una lampada a gass.
-%non sono sicuro se la lampada era al sodio o al mercurio, credo al sodio in quanto il mercurio è pericoloso e non dovrebbe essere usato nei laboratori didattici.
+Lo scopo di questa esperienza di laboratorio è quello di osservare la relazione tra l'indice di rifrazione e la lunghezza d'onda dei raggi luminosi. A tal fine abbiamo utilizzato un prisma per scomporre i raggi generati da una lampada al cadmio, misurando la loro deviazione in funzione della lunghezza d'onda.
 
-
+Nella seconda parte della relazione abbiamo verificato sperimentalmente la legge che lega l'angolo di incidenza con l'angolo di uscita dei raggi in un prisma.
