--- a/O2/Latex/Procedimento.tex
+++ b/O2/Latex/Procedimento.tex
@@ -1,42 +1,60 @@
 \section{Procedimento \& Analisi dati}
 
-\subsection{Relazione tra l'indice di rifrazione di un materiale e la lunghezza d'onda del raggio incidente}
+\subsection{Relazione tra indice di rifrazione e lunghezza d'onda}
 
-La prima operazione eseguita è stata quella di misurare l'angolo ''zero''. Ovvero abbiamo misurato l'anglolo segnato dal goniometro quando tra la sorgente luminosa e il canocchiale, allineati, non vi era interposto alcun'oggetto. Ricordiamo che più si stringe la fenditura del collimatore più la misura dell'angolo ''zero'' risulta essere precisa. Questo compatibilmente con l'intensità luminosa osservabile da un occhio umano.
-L'angolo ''zero'' quindi ha il seguente valore:
+La prima operazione eseguita è stata quella di misurare l'angolo ``zero''. Ovvero abbiamo misurato l'angolo segnato dal goniometro quando tra la sorgente luminosa e il canocchiale, allineati, non vi era interposto alcun'oggetto. Ricordiamo che più si stringe la fenditura del collimatore più la misura dell'angolo ``zero'' risulta essere precisa, tuttavia stringendo troppo non si vede una mazza. Bisogna quindi arrivare ad un compromesso.
+L'angolo ``zero'' quindi ha il seguente valore:
 
 \begin{equation}
 	\theta\ped{0} \,=\, 128^\circ \,31' \pm 1'
 \end{equation} 
+%
+dove abbiamo considerato l'incertezza di risoluzione pari ad un primo anche se il goniometro ha una risoluazione di misura di 30''.
 
-Ora vogliomo osservare la relazione che sussiste tra l'indice di rifrazione del nostro prisma di vetro e la lunghezza d'ona di un raggio luminoso.
+Ora vogliamo osservare la relazione che sussiste tra l'indice di rifrazione del nostro prisma di vetro e la lunghezza d'onda di un raggio luminoso.
 A tal fine occorre ricordare che un raggio luminoso incidente su una faccia di un prisma subisce una riflessione e una rifrazione, poichè passa da un mezzo ad un altro.
-Consideriamo ora cosa accade al raggio rifratto. Poichè il raggio luminoso incidente non è monocromatico questo è composto da numerosi raggi luminosi con lunghezza d'onda differente, tutte quelle presenti nello spettro del visibile. Infatti quando il raggio incidente viaggia attraverso il prisma si scompone nelle sue varie componenti (dispersione della luce) a seconda delle diffrenti lunghezze d'onda che lo comongono. Quindi i ragi monocromatici subiscono un'ulteriore rifrazione passando nuovamente dal vetro all'aria, uscendo pertanto dal prisma. Questa seconda rifrazione non porta altro che ad un'amplificazione dell'effetto precedente, pertanto è più semplice distinguere i vari raggi luminosi.
-In questa esperienza noi non siamo in grado di misurare direttamente la lunghezza d'onda di un raggio luminoso. Ciononostante sappiamo che ad un dato colore del raggio luminoso corrisponde una certa lunghezza d'onda, pertanto ci interessa trovare l'indice di rifrazione, del prisma, corrispondente ai nostri raggi monocromatici e quindi ad una precisa lunghezza d'onda ($\lambda$).
-A tal fine noi sappiamo che, in un prisma, per ottenere l'indice di rifrazione di un materiale senza conoscere la lunghezza d'onda del raggio luminoso incidente, basta conoscere l'angolo massimo ($\theta\ped{max}$) di uscita del raggio rifratto rispetto al proungamento della direzione incidente. Quindi noto questo valore applichiamo la sguente relazione:
+Consideriamo ora cosa accade al raggio rifratto. Poichè il raggio luminoso incidente non è monocromatico questo è composto da numerosi raggi luminosi con lunghezza d'onda differente, in base alla sorgente che emette i raggi. Quando il raggio incidente viaggia attraverso il prisma si scompone nelle sue varie componenti (dispersione della luce) a seconda delle diffrenti lunghezze d'onda che lo compongono. Quindi i raggi monocromatici subiscono un'ulteriore rifrazione passando nuovamente dal vetro all'aria, uscendo pertanto dal prisma. Questa seconda rifrazione non porta altro che ad un'amplificazione dell'effetto precedente, pertanto è più semplice distinguere i vari raggi luminosi.
+
+In questa esperienza noi non siamo in grado di misurare direttamente la lunghezza d'onda di un raggio luminoso. Per superare questo ostacolo si può sfruttare una lampada a gas, che ha la particolarità di emettere luce solo a determinate lunghezze d'onda, in base al tipo di gas nella lampada. Scomponendo con il prisma la luce proveniente dalla lampada a gas (nel nostro caso una lampada al cadmio), si possono osservare i raggi corrispondenti alle lunghezze d'onda che essa emette.
+
+Una volta note le lunghezze d'onda, si può ottenere il valore dell'indice di rifrazione per una specifica lunghezza d'onda misurando l'algolo di deviazione $\theta$, ovvero l'angolo di uscita del raggio rispetto al prolungamento della direzione incidente (si veda Figura \ref{fig:prisma}).
+
+Il calcolo si semplifica notevolmente se si adotta la seguente strategia. L'angolo di deviazione $\theta$ varia al variare dell'angolo di incidenza. Si può dimostrare, sia sperimentalmente che teoricamente, che esiste un angolo massimo di deviazione che corrisponde alla configurazione in Figura \ref{fig:prisma}. Si può notare che la configurazione è simmetrica, ovvero l'angolo di incidenza $\theta_i$ è uguale all'angolo di uscita (rispetto alla normale alla superficie). Con semplici considerazioni di geometria, conoscendo l'angolo massimo ($\theta\ped{max}$) di deviazione, si può ricavare l'indice di rifrazione del prisma con la seguente relazione:
+
+\begin{SCfigure}[0.6][t]
+    \includegraphics[width=10cm]{prisma1.pdf}
+    \caption{}
+    \label{fig:prisma}
+\end{SCfigure}
 
 \begin{equation}
-	n \,=\, \frac{\sin{(\alpha\,+\,\frac{\theta\ped{max}}{2})}}{\sin{\frac{\alpha}{2}}}
+	n \,=\, \frac{\sin{(\frac{\alpha \,+\, \theta\ped{max}}{2})}}{\sin{\frac{\alpha}{2}}}
 	\label{indice_rif}
 \end{equation}
 
-dove $\alpha$ è l'angolo di apertura del prisma, che nel nostro caso vale $60^\circ$, e ci ricaviamo così il valore dell'indice di rifrazione in base al colore (quindi indirettamente alla lunghezza d'onda) del raggio luminoso in esame.
-Per completare il quadro teorico è doveroso chiarire cosa si intenda con $\theta\ped{max}$: questo angolo è l'angolo massimo di uscita, dal prisma, del ragio monocromatico. Infatti sperimentalmente si è osservato che sopra un certo $\theta$ il raggio luminoso non continua ad aumetare l'angolo che forma con il prolungamento del raggio incidente, ma ''ritorna indietro''.\\
-%scusatemi, questa ultima descrizione non sono riuscito a farla meglio. Lo so Pasa mi vuole ammazzare perchè tocca fare tutto a lui... :(
+dove $\alpha$ è l'angolo di apertura del prisma (vedi Figura \ref{fig:prisma}), che nel nostro caso vale $60^\circ$.
 
-Ora questa è la teoria che stà alla base dell'esperienza. Operativamente per misurare $\theta\ped{max}$ abbiamo adottato la seguente procedura:
+Questa è la teoria che sta alla base dell'esperienza. Operativamente per misurare $\theta\ped{max}$ abbiamo adottato la seguente procedura:
 
 \begin{itemize}
-	\item{si posiziona il prisma al centro del goniometro. Successivamente si ruota il prisma per cercare di ottenere $\theta\ped{max}$, aiutandosi con il canocchiale;}
-	\item{una volta ottenuto $\theta\ped{max}$ si cerca di allineare il meglio possibile il canocchiale col crocifilo con il raggio monocromatico in esame e si legge sullo spettrogoniometro il valore dell'angolo segnato ($\theta\ped{i}$);}
-	\item{quindi per ottenere $\theta\ped{max}$ non si deve fare altro che una semplice differenza tra $\theta\ped{i}$ e $\theta\ped{0}$;}
+	\item{Si posiziona il prisma al centro del goniometro. Successivamente si ruota il prisma per cercare di ottenere $\theta\ped{max}$, aiutandosi con il canocchiale. $\theta\ped{max}$ si ottiene quando, continuando ad aumentare l'angolo di incidenza, l'angolo di deviazione si ferma e ``torna indietro'';}
+	\item{Una volta ottenuto $\theta\ped{max}$ si allinea il canocchiale col crocefilo con il raggio monocromatico in esame e si legge sullo spettrogoniometro il valore dell'angolo segnato $\theta\ped{\lambda}$, dove $\lambda$ sta per la lunghezza d'onda del raggio;}
+	\item{Quindi per ottenere $\theta\ped{max,\lambda}$ non si deve fare altro che una semplice differenza tra $\theta\ped{\lambda}$ e $\theta\ped{0}$;}
 \end{itemize}
 
-Infine una volta ottenuti i vari valori di $\theta\ped{max}$ per ciascuno dei raggi monocromatici che siamo stati in grado di distinguere ne calcoliamo il rispettivo indice di rifrazione sfruttando la relazione (\ref{indice_rif}). I valori che abbiamo ottenuto sono riportati nella seguente tabella, nella quale è stato associato al colore del raggio monocromatico la ripettiva lunghezza d'onda, ottenuta trammite supporto multimediale.
+Infine una volta ottenuti i vari valori di $\theta\ped{max,\lambda}$, uno per ciascuno dei raggi monocromatici che siamo stati in grado di distinguere, ne calcoliamo il rispettivo indice di rifrazione sfruttando la relazione (\ref{indice_rif}). I valori che abbiamo ottenuto sono riportati nella seguente tabella (Tabella \label{tab:enne}), nella quale è stato associato al colore del raggio monocromatico la rispettiva lunghezza d'onda.
 
 \input{tabella_enne_gradi.tex}
 
-Come possiamo notare dai valori tabulati l'indice di rifrazione dei vari raggi monocromatici verde blu e viola varia solo se si osserva la terza cifra decimale, mentre tra questi e il rosso la diffrenza la si può notare anche esaminando la seconda cifra decimale. Questa differenza ha senso perchè osservando la distanza, tra loro, dei raggi con il canocchiale, il raggio monocromatico rosso era sensibilmente più distante dagli altri raggi, come si può notare anche dai rispettivi valori di lunghezza d'onda. Infatti il raggio di colore rosso si trova ad un estremo dello spettro del visibile, mentre i raggi verde blu e viola sono più vicini all'altra estremità dello spettro luminoso visibile, ovvero dalla parte del colore blu/viola. Infine sperimentalmente abbiamo avuto non poche difficoltà ad individuare le due gradazioni di rosso oltre a quella primaria. Questa difficoltà si può comprendere se si osserva che l'indice di rifraione per i tre raggi monocromatici rossi varia soltanto attorno alla quarta cifra decimale. Inoltre anche le rispettive lunghezze d'onda non sono poi così marcatamente differenti.
+\begin{figure}[t]
+    \includegraphics[width=16cm]{wave_index.pdf}
+    \caption{}
+    \label{fig:prisma}
+\end{figure}
+
+Come possiamo notare dai valori tabulati, l'indice di rifrazione per i la luce di colore verde, blu e viola varia solo se si osserva la terza cifra decimale, mentre per le differenti tonalità di rosso occorre quasi la quarta. Invece tra i rossi il verde-viola-blu la differenza si può notare anche esaminando la seconda cifra decimale.
+
+Queste differenze hanno senso perchè, osservando con il canocchiale la distanza tra le righe, il raggio monocromatico rosso era sensibilmente più distante dagli altri raggi, come si può notare anche dai rispettivi valori di lunghezza d'onda. Infatti il raggio di colore rosso si trova ad un estremo dello spettro del visibile, mentre i raggi verde blu e viola sono più vicini all'altra estremità dello spettro luminoso visibile, ovvero dalla parte del colore blu/viola. Infine sperimentalmente abbiamo avuto non poche difficoltà ad individuare le due gradazioni di rosso oltre a quella primaria. Questa difficoltà si può comprendere se si osserva che l'indice di rifraione per i tre raggi monocromatici rossi varia soltanto attorno alla quarta cifra decimale. Inoltre anche le rispettive lunghezze d'onda non sono poi così marcatamente differenti.
 
 \subsection{Verifica sperimentale della legge che lega l'angolo di incidenza, sul prisma, di un raggio luminoso col relativo angolo di uscita}
 
