--- a/O2/Latex/Procedimento.tex
+++ b/O2/Latex/Procedimento.tex
@@ -54,7 +54,9 @@ Infine una volta ottenuti i vari valori di $\theta\ped{max,\lambda}$, uno per ci
 
 Come possiamo notare dai valori tabulati, l'indice di rifrazione per i la luce di colore verde, blu e viola varia solo se si osserva la terza cifra decimale, mentre per le differenti tonalità di rosso occorre quasi la quarta. Invece tra i rossi il verde-viola-blu la differenza si può notare anche esaminando la seconda cifra decimale.
 
-Queste differenze hanno senso perchè, osservando con il canocchiale la distanza tra le righe, il raggio monocromatico rosso era sensibilmente più distante dagli altri raggi, come si può notare anche dai rispettivi valori di lunghezza d'onda. Infatti il raggio di colore rosso si trova ad un estremo dello spettro del visibile, mentre i raggi verde blu e viola sono più vicini all'altra estremità dello spettro luminoso visibile, ovvero dalla parte del colore blu/viola. Infine sperimentalmente abbiamo avuto non poche difficoltà ad individuare le due gradazioni di rosso oltre a quella primaria. Questa difficoltà si può comprendere se si osserva che l'indice di rifraione per i tre raggi monocromatici rossi varia soltanto attorno alla quarta cifra decimale. Inoltre anche le rispettive lunghezze d'onda non sono poi così marcatamente differenti.
+Queste differenze hanno senso perchè, osservando con il canocchiale la distanza tra le righe dei vari colori, il raggio rosso era sensibilmente più distante dagli altri, come si può notare anche dai rispettivi valori di lunghezza d'onda. Il colore rosso si trova ad un estremo dello spettro del visibile, mentre i raggi verde, blu e viola sono più vicini all'altra estremità dello spettro. Sperimentalmente abbiamo avuto non poche difficoltà ad individuare le due gradazioni di rosso oltre a quella primaria (Rosso 1), poiché le rispettive lunghezze d'onda non sono così marcatamente differenti. Come già notato gli indici di rifrazione delle tre tonalità di rosso sono molto simili, al punto che i valori sono tra di loro compatibili.
+
+Un altra difficoltà è derivata dal fatto che la lampada al cadmio emette debolmente alle lunghezze d'onda dei rossi 2 e 3, e quindi le righe sono difficilmente visibili.
 
 \subsection{Verifica sperimentale della legge che lega l'angolo di incidenza, sul prisma, di un raggio luminoso col relativo angolo di uscita}
 
