--- a/O2/Latex/Procedimento.tex
+++ b/O2/Latex/Procedimento.tex
@@ -13,13 +13,13 @@ dove abbiamo considerato l'incertezza di risoluzione pari ad un primo anche se i
 
 Ora vogliamo osservare la relazione che sussiste tra l'indice di rifrazione del nostro prisma di vetro e la lunghezza d'onda di un raggio luminoso.
 A tal fine occorre ricordare che un raggio luminoso incidente su una faccia di un prisma subisce una riflessione e una rifrazione, poichè passa da un mezzo ad un altro.
-Consideriamo ora cosa accade al raggio rifratto. Poichè il raggio luminoso incidente non è monocromatico questo è composto da numerosi raggi luminosi con lunghezza d'onda differente, in base alla sorgente che emette i raggi. Quando il raggio incidente viaggia attraverso il prisma si scompone nelle sue varie componenti (dispersione della luce) a seconda delle diffrenti lunghezze d'onda che lo compongono. Quindi i raggi monocromatici subiscono un'ulteriore rifrazione passando nuovamente dal vetro all'aria, uscendo pertanto dal prisma. Questa seconda rifrazione non porta altro che ad un'amplificazione dell'effetto precedente, pertanto è più semplice distinguere i vari raggi luminosi.
+Consideriamo ora cosa accade al raggio rifratto. Poichè il raggio luminoso incidente non è monocromatico questo è composto da numerosi raggi luminosi con lunghezza d'onda differente, in base alla sorgente che emette i raggi. Quando il raggio incidente viaggia attraverso il prisma si scompone nelle sue varie componenti (dispersione della luce) a seconda delle diffrenti lunghezze d'onda che lo compongono. Quindi i raggi monocromatici subiscono un'ulteriore rifrazione passando nuovamente dal vetro all'aria, uscendo infine dal prisma. Questa seconda rifrazione non porta altro che ad un'amplificazione dell'effetto precedente, pertanto è più semplice distinguere i vari raggi luminosi.
 
 In questa esperienza noi non siamo in grado di misurare direttamente la lunghezza d'onda di un raggio luminoso. Per superare questo ostacolo si può sfruttare una lampada a gas, che ha la particolarità di emettere luce solo a determinate lunghezze d'onda, in base al tipo di gas nella lampada. Scomponendo con il prisma la luce proveniente dalla lampada a gas (nel nostro caso una lampada al cadmio), si possono osservare i raggi corrispondenti alle lunghezze d'onda che essa emette.
 
-Una volta note le lunghezze d'onda, si può ottenere il valore dell'indice di rifrazione per una specifica lunghezza d'onda misurando l'algolo di deviazione $\theta$, ovvero l'angolo di uscita del raggio rispetto al prolungamento della direzione incidente (si veda Figura \ref{fig:prisma}).
+Note a priori le lunghezze d'onda, si può ottenere il valore dell'indice di rifrazione per una specifica lunghezza d'onda misurando l'algolo di deviazione $\theta\ped{max}$, ovvero l'angolo formato dai prolungamenti dei raggi incidente e di uscita dal prisma (si veda Figura \ref{fig:prisma} per maggiore chiarezza).
 
-Il calcolo si semplifica notevolmente se si adotta la seguente strategia. L'angolo di deviazione $\theta$ varia al variare dell'angolo di incidenza. Si può dimostrare, sia sperimentalmente che teoricamente, che esiste un angolo massimo di deviazione che corrisponde alla configurazione in Figura \ref{fig:prisma}. Si può notare che la configurazione è simmetrica, ovvero l'angolo di incidenza $\theta_i$ è uguale all'angolo di uscita (rispetto alla normale alla superficie). Con semplici considerazioni di geometria, conoscendo l'angolo massimo ($\theta\ped{max}$) di deviazione, si può ricavare l'indice di rifrazione del prisma con la seguente relazione:
+Il calcolo si semplifica notevolmente se si adotta la seguente strategia. L'angolo di deviazione $\theta\ped{max}$ varia al variare dell'angolo di incidenza. Si può dimostrare, sia sperimentalmente che teoricamente, che esiste un angolo massimo di deviazione che corrisponde alla configurazione in Figura \ref{fig:prisma}. Si può notare che la configurazione è simmetrica, ovvero l'angolo di incidenza $\theta_i$ è uguale all'angolo di uscita (rispetto alla normale alla superficie). Con semplici considerazioni geometriche, conoscendo l'angolo massimo $\theta\ped{max}$ di deviazione, si può ricavare l'indice di rifrazione del prisma con la seguente relazione:
 
 \begin{SCfigure}[0.6][t]
     \includegraphics[width=10cm]{prisma1.pdf}
@@ -42,7 +42,7 @@ Questa è la teoria che sta alla base dell'esperienza. Operativamente per misura
 	\item{Quindi per ottenere $\theta\ped{max,\lambda}$ non si deve fare altro che una semplice differenza tra $\theta\ped{\lambda}$ e $\theta\ped{0}$;}
 \end{itemize}
 
-Infine una volta ottenuti i vari valori di $\theta\ped{max,\lambda}$, uno per ciascuno dei raggi monocromatici che siamo stati in grado di distinguere, ne calcoliamo il rispettivo indice di rifrazione sfruttando la relazione (\ref{indice_rif}). I valori che abbiamo ottenuto sono riportati nella seguente tabella (Tabella \label{tab:enne}), nella quale è stato associato al colore del raggio monocromatico la rispettiva lunghezza d'onda.
+Infine una volta ottenuti i vari valori di $\theta\ped{max,\lambda}$, uno per ciascuno dei raggi monocromatici che siamo stati in grado di distinguere, ne calcoliamo il rispettivo indice di rifrazione sfruttando la relazione (\ref{indice_rif}). I valori che abbiamo ottenuto sono riportati nella seguente tabella (Tabella \ref{tab:enne}), nella quale è stato associato al colore del raggio monocromatico la rispettiva lunghezza d'onda.
 
 \input{tabella_enne_gradi.tex}
 
@@ -52,11 +52,10 @@ Infine una volta ottenuti i vari valori di $\theta\ped{max,\lambda}$, uno per ci
     \label{fig:prisma}
 \end{figure}
 
-Come possiamo notare dai valori tabulati, l'indice di rifrazione per i la luce di colore verde, blu e viola varia solo se si osserva la terza cifra decimale, mentre per le differenti tonalità di rosso occorre quasi la quarta. Invece tra i rossi il verde-viola-blu la differenza si può notare anche esaminando la seconda cifra decimale.
+Come possiamo notare dai valori tabulati, l'indice di rifrazione per la luce di colore verde, blu e viola varia solo se si osserva la terza cifra decimale, mentre per le differenti tonalità di rosso occorre quasi la quarta. Invece la differenza tra le sfumature di rosso e i tre colori verde, blu e viola si può notare anche esaminando solo la seconda cifra decimale.
 
-Queste differenze hanno senso perchè, osservando con il canocchiale la distanza tra le righe dei vari colori, il raggio rosso era sensibilmente più distante dagli altri, come si può notare anche dai rispettivi valori di lunghezza d'onda. Il colore rosso si trova ad un estremo dello spettro del visibile, mentre i raggi verde, blu e viola sono più vicini all'altra estremità dello spettro. Sperimentalmente abbiamo avuto non poche difficoltà ad individuare le due gradazioni di rosso oltre a quella primaria (Rosso 1), poiché le rispettive lunghezze d'onda non sono così marcatamente differenti. Come già notato gli indici di rifrazione delle tre tonalità di rosso sono molto simili, al punto che i valori sono tra di loro compatibili.
-
-Un altra difficoltà è derivata dal fatto che la lampada al cadmio emette debolmente alle lunghezze d'onda dei rossi 2 e 3, e quindi le righe sono difficilmente visibili.
+Queste differenze hanno senso perchè, osservando con il canocchiale la distanza tra le righe dei vari colori, il raggio rosso era sensibilmente più distante dagli altri, come si può notare anche dai rispettivi valori di lunghezza d'onda. Il colore rosso si trova ad un estremo dello spettro del visibile, mentre i raggi verde, blu e viola sono più vicini all'altra estremità dello spettro. Sperimentalmente abbiamo avuto non poche difficoltà ad individuare le due gradazioni di rosso oltre a quella primaria (Rosso 1), poiché le rispettive lunghezze d'onda non sono così marcatamente differenti e soprattutto poiché l'intensità del raggio luminoso era particolarmente bassa.
+Come già notato gli indici di rifrazione delle tre tonalità di rosso sono molto simili, al punto che i valori sono tra di loro compatibili.
 
 \subsection{Relazione tra angolo di incidenza e di deviazione}
 
